# function_word

./: README.md  ablation.py  ablation_blimp_analysis.py  ablation_eval.sh  ablation_mask.py  ablation_mask2.py  analysis_sas_lh.py  benchmark_eval.py  create_data.py  create_languages.py  eval.sh  generate_config.py  generate_function_word.py  generate_pseudo_function_words.py  lower_case.py  normalize_blimp.py  pyproject.toml  requirements.txt  sas_probing.sh  sas_probing2.sh  save_config.py  stats.py  test.py  test_eval.py  test_split.py  train_clm.py  train_model.sh  train_tokenizer.py
ablation_experiments/: ablation.py  ablation_analysis.py  ablation_blimp_analysis.py  ablation_function_head.py  analysis.py  analysis_trajectory.py  analysis_uas.py
bigram_function_blimp_results/: results_GPT2_bigram_function_42_epoch-10.csv  results_GPT2_bigram_function_53_epoch-1.csv  results_GPT2_bigram_function_53_epoch-10.csv  results_GPT2_bigram_function_53_epoch-2.csv  results_GPT2_bigram_function_53_epoch-5.csv  results_GPT2_bigram_function_53_epoch-7.csv  results_GPT2_bigram_function_53_epoch-8.csv  results_GPT2_bigram_function_53_epoch-9.csv  results_GPT2_bigram_function_67_epoch-10.csv  results_GPT2_natural_function_53_epoch-10.csv
blimp/: create_blimp.py  create_languages.py  function_word_pseudowords.txt  parse_blimp.py  uid_counts.csv
blimp_ablation_epoch10_5head_content/: results_GPT2_natural_function_53_epoch-10.csv
blimp_ablation_epoch10_5head_function/: results_GPT2_natural_function_42_epoch-10.csv  results_GPT2_natural_function_53_epoch-10.csv  (+1 more)
(+5145 files in other folders)
