[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-lm-training"
version = "0.1.0"
description = "Causal LM experiments with Transformer and RNN"
authors = [
    { name = "Xiulin Yang", email = "xiulin.yang.compling@gmail.com" }
]
dependencies = [
    "datasets",
    "evaluate",
    "pyyaml"
]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]